# FAST-OAD_notebooks

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
base_notebooks/: pyproject.toml
binder/: requirements.txt
